fix: Create copies of lists, sets & maps