@@ -22,7 +22,6 @@ import eu.cloudnetservice.common.document.gson.JsonDocument;
 import eu.cloudnetservice.driver.CloudNetDriver;
 import eu.cloudnetservice.driver.provider.CloudServiceFactory;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashSet;
 import java.util.Set;
 import java.util.UUID;
@@ -801,11 +800,11 @@ public class ServiceConfiguration extends ServiceConfigurationBase implements Cl
         this.javaCommand,
         this.autoDeleteOnStop,
         this.staticService,
-        Collections.unmodifiableSet(this.groups),
-        Collections.unmodifiableSet(this.deletedFilesAfterStop),
-        Collections.unmodifiableSet(this.templates),
-        Collections.unmodifiableSet(this.deployments),
-        Collections.unmodifiableSet(this.includes),
+         Set.copyOf(this.groups),
+         Set.copyOf(this.deletedFilesAfterStop),
+         Set.copyOf(this.templates),
+         Set.copyOf(this.deployments),
+         Set.copyOf(this.includes),
         this.properties);
     }
   }
